# StarkPaymentV1-Split-Solana

./: Anchor.toml  package-lock.json  package.json
programs/stark-payment-v1/: Cargo.toml
programs/stark-payment-v1/src/: lib.rs
programs/stark-payment-v1/src/libraries/: split_method.rs
programs/stark_pay_splitV1/: Cargo.toml
programs/stark_pay_splitV1/src/: lib.rs
tests/: stark-payment-v1.ts  stark_pay_split.ts
